# mlcflow

./: .gitignore  404.html  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  config.yaml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/: CODEOWNERS  pull_request_template.md
.github/scripts/: test_mlc_access.py  test_repo_pull_force.py
.github/workflows/: ai-pr-review.yml  build_wheels.yml  cla.yml  codeql.yml  format.yml  mlperf-inference-bert.yml  mlperf-inference-resnet50.yml  publish.yml  reset-fork.yml  test-installer-curl.yml  test-mlc-core-actions.yaml  test-mlc-docker-core.yml  test-mlc-podman.yml  test-mlc-remote-run.yml  test-unit.yml
docs/: error_codes.md
docs/install/: README.md  index.md  install.md  mlcflow_linux.sh  mlcflow_unix_installer.sh
docs/targets/cache/: index.md
docs/targets/repo/: index.md
docs/targets/script/: docker.md  execution-flow.md  index.md  meta.md  native-script.md  script-meta.md  test.md
error_codes/: index.html
install/: index.html
mlc/: RepoAction.py  ScriptAction.py  __init__.py  __main__.py  action.py  action_factory.py  cache_action.py  cfg_action.py  error_codes.py  experiment_action.py  index.py  item.py  logger.py  main.py  meta_schema.py  repo.py  repo_action.py  script_action.py  utils.py
search/: search_index.json
targets/cache/: index.html
targets/repo/: index.html
targets/script/: index.html
targets/script/docker/: index.html
targets/script/execution-flow/: index.html
tests/: test_action_invalid_meta_entries.py  test_cache_mark_tmp.py
(+5 files in other folders)
